# AutoSettings

./: .gitignore  CMakeLists.txt  MainResource.qrc  README.md  fadeqstackedwidget.cpp  fadeqstackedwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_Drag.cpp  mainwindow_Frameless.cpp  mainwindow_MenuBT.cpp  mainwindow_customnade.cpp  mainwindow_update.cpp  qkeepbutton.cpp  qkeepbutton.h  qmessagewidget.cpp  qmessagewidget.h  qpopmessage.cpp  qpopmessage.h  qqsschanger.cpp  qqsschanger.h  qstylescrollarea.cpp  qstylescrollarea.h  qstylewidget.cpp  qstylewidget.h  quniquebuttongroup.cpp  quniquebuttongroup.h  qvboxlayoutwidget.cpp  qvboxlayoutwidget.h  style.qss
